--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -3,7 +3,7 @@
         <h2>Home</h2>
     </div>
     {{#each posts as |post|}}
-    {{!-- make div clickable to show contents and create comments --}}
+    {{!-- make div clickable to lead to post.handlebars --}}
     <div>
         <p>
             {{post.id}}.
