--- a/views/layout/main.handlebars
+++ b/views/layout/main.handlebars
@@ -12,7 +12,7 @@
 <body>
     <nav>
         <a href="/">Home</a>
-        <a href="/post">Dashboard</a>
+        <a href="/">Dashboard</a>
         {{#if loggedIn}}
         <button id="logout">Logout</button>
         {{else}}
@@ -27,4 +27,5 @@
             {{{ body }}}
         </div>
     </main>
+    {{!-- make if logged in script --}}
 </body>
