--- a/views/comments.handlebars
+++ b/views/comments.handlebars
@@ -1,5 +1,31 @@
+{{!-- show post that the user is commenting on? --}}
+<div>
+    <div class="post-div">
+        <div>
+            <h2>{{post.title}}</h2>
+        </div>
+        {{!-- display a single post --}}
+        <div>
+            <p>
+                Created by: {{!-- display username of post creator --}} on {{post.createdAt}}
+            </p>
+        </div>
+        <div>
+            <p>
+                {{post.contents}}
+            </p>
+        </div>
+    </div>
+
 {{!-- make text area for comment --}}
+    <div class="new-comment">
+        <div>
+            <textarea class="comment-text"></textarea>
+        </div>
+        <div>
+            <a href="update-comments">Submit</a>
+        </div>
+
+    </div>
 {{!-- make submit button for comment --}}
 
-
-{{!-- show post that the user is commenting on? --}}
