--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,21 +1,34 @@
 <div>
-    <div>
-        <h2>Current Post</h2>
+    <div class="post-div">
+        <div>
+            <h2>{{post.title}}</h2>
+        </div>
+        {{!-- display a single post --}}
+        <div>
+            <p>
+                Created by: {{!-- display username of post creator --}} on {{post.createdAt}}
+            </p>
+        </div>
+        <div>
+            <p>
+                {{post.contents}}
+            </p>
+        </div>
     </div>
-    {{#each posts as |post|}}
-    <div>
-        <p>
-            {{post.id}}.
-            {{!-- display username of post creator --}}
-            {{post.title}}
-            {{post.createdAt}}
-        </p>
-    </div>
-    <div>
-        <p>
-            {{post.contents}}
-        </p>
-        {{!-- show existing comments for the post --}}
-        {{!-- add an option to leave a comment --}}
-    </div>
+
+    <div class="comment-div">
+        <div>
+            <div>
+                <p>Created by {{!-- add username --}} on {{comments.createdAt}}</p>
+            </div>
+            {{!-- show existing comments for the post --}}
+            <div>
+                <p>{{comment.contents}}</p>
+            </div>
+        </div>
+            {{!-- add an option to leave a comment --}}
+        <div>
+            <a href="newComment">Add a comment</a> 
+        </div>
+    </div>    
 </div>
