updated working directory

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -5,11 +5,7 @@
     {{#each posts as |post|}}
     {{!-- make div clickable to lead to post.handlebars --}}
     <div>
-        <p>
-            {{post.id}}.
-            {{post.title}}
-            {{post.createdAt}}
-        </p>
+        <p>{{title}}</p>
     </div>
 </div>
 
