--- a/views/layout/main.handlebars
+++ b/views/layout/main.handlebars
@@ -28,4 +28,7 @@
         </div>
     </main>
     {{!-- make if logged in script --}}
+    {{#if loggedIn}}
+    <script src="/js/logout.js"></script>
+    {{/if}}
 </body>
