--- a/views/newpost.handlebars
+++ b/views/newpost.handlebars
@@ -1,3 +1,5 @@
 {{!-- text are to enter title and contents --}}
 {{!-- add a submit button --}}
 {{!-- returns user to an updated dashboard with the new post visible --}}
+
+{{!-- make this a partial as well? --}}
