--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,12 +3,12 @@
     {{!-- prompt to create username and password --}}
         <h2>Sign Up</h2>
         <div class="form-group">
-            <label for="username">Username:</label>
-            <input class="form-input" type="text" id="username"/>
+            <label for="username-signup">Username:</label>
+            <input class="form-input" type="text" id="username-signup"/>
         </div>
         <div class = "form-group">
-            <label for="password">Password:</label>
-            <input class="form-input" type="password" id="password">
+            <label for="password-signup">Password:</label>
+            <input class="form-input" type="password" id="password-signup">
         </div>
     {{!-- saves credentals and logs in --}}
         <div class="form-group">
