--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blog</title>
   {{!-- need to make CSS --}}
-  <link rel="stylesheet" type="text/css" href="/css/style.css">
+  {{!-- <link rel="stylesheet" type="text/css" href="/css/style.css"> --}}
 </head>
 
 <body>
