--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,7 @@
 <body>
     <nav>
         <a href="/">Home</a>
-        <a href="/">Dashboard</a>
+        <a href="/dashboard">Dashboard</a>
         {{#if loggedIn}}
         <button id="logout">Logout</button>
         {{else}}
