pushing progress twords seeing a single post

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -4,13 +4,12 @@
     </div>
     {{#each posts as |post|}}
     {{!-- make div clickable to lead to post.handlebars --}}
-    <div>
-        {{#each post.Posts as |item| }}
-        <p>{{item.title}}</p>
-        <p>Created by: {{post.name}} on {{item.createdAt}}</p>
+    <a href="/post/{{post.id}}">
+        <div>
+            <p>{{post.title}} Created on {{post.createdAt}}</p>
+        </div>
+    </a> 
         {{/each }}
-    </div> 
-    {{/each }}
 </div>
 
 {{!-- display post from all users --}}
