--- a/views/partials/post-details.handlebars
+++ b/views/partials/post-details.handlebars
@@ -1,3 +1,6 @@
 {{!-- get a single post --}}
-{{!-- show comments --}}
-{{!-- --}}
+<div>
+        <div>
+            <p>{{title}} Created on {{createdAt}}</p>
+        </div>
+</div>
