--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -11,9 +11,28 @@
         <p>{{comment.contents}}</p>
         {{/each}}
     </div>
+
     {{#if loggedIn}}
-        <a href="create-comment">Leave A comment!</a>
-        <button id="logout">Logout</button>
+        <form class="comment-form">
+
+    <div class="new-comment">
+
+        <div>
+            <label for="comment-text">Leave a Comment</label>
+            <textarea id="comment-text" rows="5" cols="70"></textarea>
+        </div>
+
+        <div>
+            <button type="submit">Add Comment</button>
+        </div>
+
+    </div>
+
+</form>    
+
+{{!-- link script --}}
+
+<script scr="/js/comment.js"></script>
         {{else}}
         <a href="/login">Login</a>
         {{/if}} 
