--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,4 +1,4 @@
-<p>Test</p>
+
 <div>
     <p>{{posts.title}} Created on {{posts.createdAt}} by {{posts.User.name}}</p>
     <p>{{posts.contents}}</p>
@@ -31,7 +31,7 @@
     </form>    
 
         {{!-- link script --}}
-        <script scr="/js/comment.js"></script>
+        <script src="/js/comment.js"></script>
         {{else}}
         <a href="/login">Login</a>
         {{/if}} 
