made update and create post handlebars files

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -9,12 +9,12 @@
         <p>{{userPost.contents}} </p>
     </div> 
     <div>
-        <a href="/update/{{userPost.id}}">Update Post</a>
+        <a href="/update-post">Update Post</a>
         <a href="api/post/delete/{{userPost.id}}">Delete Post</a>
     </div>
     {{/each }}
     </div>
-        <a href="/create">Create a new Post</a>
+        <a href="/new-post">Create a new Post</a>
     </div>
 </div>
 
