--- a/views/new-post.handlebars
+++ b/views/new-post.handlebars
@@ -1,11 +1,11 @@
 <div>
 
     <div class="test-container">
-        <h3>Update post</h3>
+        <h3>Create a New Post</h3>
     </div>
 
     <div>
-        <form class="update-post-form">
+        <form class="new-post-form">
             <div class="post-area">
 
                 <div>
