--- a/views/partials/post-details.handlebars
+++ b/views/partials/post-details.handlebars
@@ -1,6 +1,7 @@
 {{!-- get a single post --}}
-<div>
-        <div>
-            <p>{{title}} Created on {{createdAt}}</p>
+<div class="card">
+        <div class="card-body">
+            <p class="card-title">{{title}}</p>
+            <p class="card-text">Created on {{createdAt}}</p>
         </div>
 </div>
