--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,22 +5,25 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blog</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   {{!-- need to make CSS --}}
   {{!-- <link rel="stylesheet" type="text/css" href="/css/style.css"> --}}
 </head>
 
 <body>
-    <nav>
-        <a href="/">Home</a>
-        <a href="/dashboard">Dashboard</a>
-        {{#if loggedIn}}
-        <button id="logout">Logout</button>
-        {{else}}
-        <a href="/login">Login</a>
-        {{/if}} 
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a href="/">Home</a>
+            <a href="/dashboard">Dashboard</a>
+            {{#if loggedIn}}
+            <button id="logout">Logout</button>
+            {{else}}
+            <a href="/login">Login</a>
+            {{/if}}
+        </div> 
     </nav>
     <main>
-        <header>
+        <header class="container-fluid text-center">
             <h1>Welcome to the Blog!</h1>
         </header>
         <div class="body">
@@ -33,5 +36,5 @@
     {{/if}} 
 
 </body>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
