--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,35 +1,35 @@
 <div>
     <form class ="form signup-form">
     {{!-- prompt to create username and password --}}
-        <h2>Sign Up</h2>
-        <div class="form-group">
+        <h3>Sign Up</h2>
+        <div class="form-group form-label">
             <label for="username-signup">Username:</label>
-            <input class="form-input" type="text" id="username-signup"/>
+            <input class="form-input form-control" type="text" id="username-signup">
         </div>
-        <div class = "form-group">
+        <div class="form-group form-label">
             <label for="password-signup">Password:</label>
-            <input class="form-input" type="password" id="password-signup">
+            <input class="form-input form-control" type="password" id="password-signup">
         </div>
     {{!-- saves credentals and logs in --}}
         <div class="form-group">
-            <button type="submit">Sign up</button>
+            <button type="submit" class="btn btn-primary">Sign up</button>
         </div>
     </form>
 
     {{!-- log in for existing users --}}
     <div class="login-card">
-        <h2 class="page-title">Login</h2>
+        <h3>Login</h2>
         <form class="form login-form">
-        <div class="form-group">
+        <div class="form-group form-label">
             <label for="username-login">Username:</label>
-            <input class="form-input" type="text" id="username-login" />
+            <input class="form-input form-control" type="text" id="username-login">
         </div>
-        <div class="form-group">
+        <div class=class="form-group form-label">
             <label for="password-login">Password:</label>
-            <input class="form-input" type="password" id="password-login" />
+            <input class="form-input form-control" type="password" id="password-login">
         </div>
         <div class="form-group">
-            <button class="btn" type="submit">Login</button>
+            <button class="btn btn-primary" type="submit">Login</button>
         </div>
         </form>
     </div>
