--- a/views/new-post.handlebars
+++ b/views/new-post.handlebars
@@ -1,26 +1,24 @@
 <div>
 
-    <div class="test-container">
+    <div>
         <h3>Create a New Post</h3>
     </div>
 
     <div>
-        <form class="new-post-form">
-            <div class="post-area">
+        <form class="form new-post-form">
 
-                <div>
+                <div class="form-group form-label">
                     <label for="post-title">Title</label>
-                    <input class="form-input" type="text" id="post-title">
+                    <input class="form-input form-control" type="text" id="post-title">
                 </div>
-                <div>
-                    <textarea id="post-content" placeholder="Write your post here" rows="5" cols="70"></textarea>
-                </div>
-
-                <div>
-                    <button type="submit">submit</button>
+                <div class="form-group form-label">
+                    <textarea class="form-input form-control" id="post-content" placeholder="Write your post here" rows="5" cols="70"></textarea>
                 </div>
 
-            </div>
+                <div class="form-group">
+                    <button class="btn btn-primary" type="submit">submit</button>
+                </div>
+
         </form>
         <script src="/js/post.js"></script>
 </div>
