--- a/views/update-post.handlebars
+++ b/views/update-post.handlebars
@@ -20,5 +20,5 @@
                 </div>
 
         </form>
-        <script src="/js/post.js"></script>
+        <script src="/js/post-update.js"></script>
 </div>
