--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,4 +1,4 @@
-<div>
+<div >
     <div>
         <h2>Dashboard</h2>
     </div>
@@ -9,7 +9,7 @@
             <h6 class="card-title">{{userPost.title}} created on {{userPost.createdAt}}</h6>
             <p class="card-text">{{userPost.contents}} </p>
             <a href="/update-post/{{userPost.id}}" class="card-link">Update Post</a>
-            <a href="api/post/{{userPost.id}}" class="delete-btn card-link">Delete Post</a>
+            <button value="{{userPost.id}}" class="btn btn-primary delete" type="submit">Delete</button>
         </div>    
     </div> 
     {{/each }}
