--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
             <a href="/">Home</a>
             <a href="/dashboard">Dashboard</a>
             {{#if loggedIn}}
-            <button id="logout">Logout</button>
+            <button class="btn btn-primary" id="logout">Logout</button>
             {{else}}
             <a href="/login">Login</a>
             {{/if}}
